# COMP390_Individual_Project1_2

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: filter_data_demo.cast
docs/sample_output/: 2023-11-27 13_33_54_835020.xls  2023-11-27_14_44_42_496754.txt
meteorite_filter/: constants.py  filter_data.py  output.py
meteorite_filter/dsv/: reader.py  writer.py
meteorite_filter/tui/: menu.py  table.py  utils.py
src/meteorite_filter/: constants.py  filter_data.py  output.py
src/meteorite_filter/dsv/: __init__.py  excel.py  reader.py  writer.py
src/meteorite_filter/tui/: menu.py  table.py  utils.py
tests/: test_filter_data.py  test_output.py
tests/dsv/: test_writer.py
